# sql_practice

./: .gitignore  README.md  pyproject.toml
data/: employees.csv  generate_data.py  orders.csv  products.csv  sales.csv
notebooks/: 00_setup_and_data.ipynb  01_ranking_functions.ipynb  02_offset_functions.ipynb  03_running_aggregates.ipynb  04_advanced_challenges.ipynb
